--- a/RickAndMorty/Scenes/Intro/Resources/IntroLocalizable.strings
+++ b/RickAndMorty/Scenes/Intro/Resources/IntroLocalizable.strings
@@ -5,3 +5,5 @@
   Created by Raul Quispe  on 25/09/23.
   
 */
+"title.button.normal" = "Enter";
+"message.text.normal" = "By pressing the button, you will be able to view the characters. Don't hesitate, click that button now!";
